// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-general-list Renders \`alarm-general-list\` with alarms 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div
    class="v-data-table theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Author
              </span>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Connector
              </span>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Component
              </span>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Resource
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
            <td
              class="text-start"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`alarm-general-list Renders \`alarm-general-list\` with empty items 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div
    class="v-data-table theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Author
              </span>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Connector
              </span>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Component
              </span>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Resource
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="4"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
